--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "svelte-tooltip",
+  "name": "@boundedinfinity/svelte-tooltip",
   "version": "0.0.1",
+  "main": "index.js",
+  "keywords": [
+    "svelte",
+    "sveltekit"
+  ],
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -9,8 +14,10 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "dependencies": {
+    "@boundedinfinity/svelte-ea": "^0.0.8"
+  },
   "devDependencies": {
-    "@boundedinfinity/svelte-ea": "^0.0.2",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.2",
@@ -23,5 +30,15 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/boundedinfinity/svelte-tooltip"
+  },
+  "bugs": {
+    "url": "https://github.com/boundedinfinity/svelte-tooltip/issues"
+  }
 }
